--- a/servers/nginx/nginx.conf
+++ b/servers/nginx/nginx.conf
@@ -34,8 +34,8 @@ http {
         server_name helios;
         
         # deployed applications
-        location /test {
-            alias ../../www/apps/test;
+        location /catalog {
+            alias ../../www/apps/catalog;
         }
         # JS libraries
         location /libs {
@@ -49,6 +49,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Scheme $scheme;
             proxy_pass http://jsonic/;
+        }
+        location /jsonic/files {
+            alias ../jsonic/files;
         }
         location /data/ {
             proxy_pass_header Server;
