Added torongo service

--- a/servers/nginx/nginx.conf
+++ b/servers/nginx/nginx.conf
@@ -28,6 +28,9 @@ http {
     upstream jsonic {
         server 127.0.0.1:8888;
     }
+    upstream torongo {
+        server 127.0.0.1:8887;
+    }
 
     server {
         listen 80;
@@ -59,8 +62,7 @@ http {
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Scheme $scheme;
-            # @todo: switch to torongo when available
-            proxy_pass http://jsonic/;
+            proxy_pass http://torongo/;
         }
     }
 }
