Fixed torongo data root

--- a/servers/nginx/nginx.conf
+++ b/servers/nginx/nginx.conf
@@ -62,7 +62,7 @@ http {
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Scheme $scheme;
-            proxy_pass http://torongo/;
+            proxy_pass http://torongo/data/;
         }
     }
 }
