Upstream cleanup in templates and config

--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -38,16 +38,16 @@ programs=mongo_dev,jsonic_dev,torongo_dev
 
 [component:jsonic_dev]
 init=git clone git://github.com/parente/jsonic.git
-program=jsonic_dev
 symlinks=jsonic/server,services/jsonic, jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
-proxies=/jsonic/,jsonic_dev/
+upstream=jsonic_dev
+proxies=/jsonic/,http://jsonic_dev/
 aliases=/jsonic/files,services/jsonic/files
 
 [component:torongo_dev]
 init=git clone git://github.com/parente/jsonic.git
-program=torongo_dev
+upstream=jsonic_dev
 symlinks=torongo/server,services/torongo, torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
-proxies=/data/,torongo_dev/data/
+proxies=/data/,http://torongo_dev/data/
 
 [component:dojotrace_dev]
 init=git clone git://github.com/gbishop/dojotrace.git
