uow script work
* Handle nginx info
* Handle symlinks
* Handle init

--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -36,26 +36,33 @@ stderr_logfile_backups=10
 [group:dev]
 programs=mongo_dev,jsonic_dev,torongo_dev
 
+[nginx]
+server_port=80
+server_name=helios
+
 [component:jsonic_dev]
-init=git clone git://github.com/parente/jsonic.git
-symlinks=jsonic/server,services/jsonic, jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
+init=git clone git://github.com/parente/jsonic.git components/jsonic
+update=cd components/jsonic && git pull origin master
+symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 upstream=jsonic_dev
 proxies=/jsonic/,http://jsonic_dev/
 aliases=/jsonic/files,services/jsonic/files
 
 [component:torongo_dev]
-init=git clone git://github.com/parente/jsonic.git
+init=git clone git://github.com/gbishop/torongo.git components/torongo
+update=cd components/torongo && git pull origin master
 upstream=jsonic_dev
-symlinks=torongo/server,services/torongo, torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
+symlinks=components/torongo/server,services/torongo, components/torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
 proxies=/data/,http://torongo_dev/data/
 
 [component:dojotrace_dev]
-init=git clone git://github.com/gbishop/dojotrace.git
-symlinks=dojotrace/trace.js,www/libs/uow/trace.js
+init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
+update=cd components/dojotrace && git pull origin master
+symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_dev]
-init=cp -r ../../common/catalog catalog
-symlinks=catalog,www/catalog
+init=ln -s ../../common/catalog components/catalog
+symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
 ; [component:someapp_dev]
