--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -20,6 +20,7 @@ stdout_logfile_backups=10
 stderr_logfile=servers/dev/services/logs/jsonic_stderr_%(process_num)02d.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
+first_port=8000
 
 [program:torongo_dev]
 directory=servers/dev/services/torongo
@@ -32,6 +33,7 @@ stdout_logfile_backups=10
 stderr_logfile=servers/dev/services/logs/torongo_stderr_%(process_num)02d.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
+first_port=7000
 
 [group:dev]
 programs=mongo_dev,jsonic_dev,torongo_dev
@@ -39,6 +41,9 @@ programs=mongo_dev,jsonic_dev,torongo_dev
 [nginx]
 server_port=80
 server_name=helios
+
+[component:mongo_dev]
+init=mkdir services/mongo
 
 [component:jsonic_dev]
 init=git clone git://github.com/parente/jsonic.git components/jsonic
@@ -51,7 +56,7 @@ aliases=/jsonic/files,services/jsonic/files
 [component:torongo_dev]
 init=git clone git://github.com/gbishop/torongo.git components/torongo
 update=cd components/torongo && git pull origin master
-upstream=jsonic_dev
+upstream=torongo_dev
 symlinks=components/torongo/server,services/torongo, components/torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
 proxies=/data/,http://torongo_dev/data/
 
@@ -64,6 +69,9 @@ symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 init=ln -s ../../common/catalog components/catalog
 symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
+
+[component:uow_dev]
+init=ln -s ../../../common/uow.js www/libs/uow.js
 
 ; [component:someapp_dev]
 ; use the component syntax to install apps for the domain too, for example:
