--- a/supervisord.conf
+++ b/supervisord.conf
@@ -31,8 +31,8 @@ serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
-;[program:nginx]
-;command=nginx -p nginx/ -c nginx/nginx.conf
-
 [include]
 files=servers/*.conf
+
+[program:nginx]
+command=nginx -p nginx/ -c nginx.conf
