Work toward proper user permissions
* upstream -> program
* Include section name in all dispatch handlers
* Make default user nobody (should externalize, cmd line?)
* Need to seteuid + chown next

--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -8,6 +8,7 @@ stdout_logfile_backups=10
 stderr_logfile=servers/dev/services/logs/mongo_stderr.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
+user=nobody
 
 [program:jsonic_dev]
 directory=servers/dev/services/jsonic
@@ -21,6 +22,7 @@ stderr_logfile=servers/dev/services/logs/jsonic_stderr_%(process_num)02d.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 first_port=8000
+user=nobody
 
 [program:torongo_dev]
 directory=servers/dev/services/torongo
@@ -34,6 +36,7 @@ stderr_logfile=servers/dev/services/logs/torongo_stderr_%(process_num)02d.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 first_port=7000
+user=nobody
 
 [group:dev]
 programs=mongo_dev,jsonic_dev,torongo_dev
@@ -44,19 +47,20 @@ server_name=helios
 
 [component:mongo_dev]
 init=mkdir services/mongo
+program=mongo_dev
 
 [component:jsonic_dev]
 init=git clone git://github.com/parente/jsonic.git components/jsonic
 update=cd components/jsonic && git pull origin master
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
-upstream=jsonic_dev
+program=jsonic_dev
 proxies=/jsonic/,http://jsonic_dev/
 aliases=/jsonic/files,services/jsonic/files
 
 [component:torongo_dev]
 init=git clone git://github.com/gbishop/torongo.git components/torongo
 update=cd components/torongo && git pull origin master
-upstream=torongo_dev
+program=torongo_dev
 symlinks=components/torongo/server,services/torongo, components/torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
 proxies=/data/,http://torongo_dev/data/
 
