--- a/supervisord.conf
+++ b/supervisord.conf
@@ -35,4 +35,5 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 files=servers/*.conf
 
 [program:nginx]
-command=nginx -p nginx/ -c nginx.conf
+command=nginx -p nginx -c nginx.conf
+priority=1000
