Twiddling settings and commenting

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,23 +1,23 @@
-daemon off;
-user nobody nobody;
-worker_processes 5;
-error_log error.log;
-pid nginx.pid;
+user nobody nogroup;                        # run nginx as this user / group
+daemon off;                                 # disable nginx daemon for superv
+worker_processes 5;                         # number of workers
+error_log error.log;                        # error log in this folder
+pid nginx.pid;                              # pid file in this folder
 
 events {
     worker_connections 1024;
 }
 
 http {
-    include mime.types;
-    access_log access.log;
+    include mime.types;                     # standard types
+    access_log access.log;                  # access log in this folder
     default_type application/octet-stream;
     keepalive_timeout 65;
     proxy_read_timeout 200;
-    proxy_next_upstream error;
+    proxy_next_upstream error;              # switch upstream on error only
     sendfile on;
     tcp_nopush on;
-    tcp_nodelay on;
+    tcp_nodelay on;                         # disable Nagle for long-lived conn
     autoindex on;
     gzip on;
     
