--- a/servers/dev.conf.sample
+++ b/servers/dev.conf.sample
@@ -43,7 +43,7 @@ programs=mongo_dev,jsonic_dev,torongo_dev
 
 [nginx]
 server_port=80
-server_name=helios
+server_name=dev.somedomain.com
 
 [component:mongo_dev]
 init=mkdir services/mongo
