Added enable / disable config support

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -32,7 +32,7 @@ serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [include]
-files=servers/*.conf
+files=servers/active/*.conf
 
 [program:nginx]
 command=nginx -p nginx -c nginx.conf
