Static info file for catalog

--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -70,7 +70,7 @@ update=cd components/dojotrace && git pull origin master
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_dev]
-init=ln -s ../../common/catalog components/catalog
+init=ln -s ../../common/catalog components/catalog; echo "Developer" > components/catalog/info
 symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
