--- a/servers/common/catalog/templates/win.nginx.conf
+++ b/servers/common/catalog/templates/win.nginx.conf
@@ -6,6 +6,9 @@ events {
 }
 
 http {
+    include mime.types;
+    default_type application/octet-stream;
+
     server {
         listen 80;
         autoindex on;
