--- a/servers/common/catalog/templates/mac.nginx.conf
+++ b/servers/common/catalog/templates/mac.nginx.conf
@@ -5,6 +5,9 @@ events {
 }
 
 http {
+    include mime.types;
+    default_type application/octet-stream;
+
     server {
         listen 80;
         autoindex on;
