Work on issue #8
* Zip containing simple sample app with some code comments
* Start of a catalog page with help on using the template

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ servers/spaceship
 servers/active/*.conf
 supervisord/*.log
 supervisord/*.pid
+servers/common/catalog/templates/myapp/*
+servers/common/catalog/info
