Fixed overlap of servername file in catalog across servers
* Put it in /libs/servername
* Point catalog to that location to fetch it
* Fix some unhandled exceptions during uow cleanup

--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -53,6 +53,7 @@ program=mongo_dev
 init=git clone git://github.com/parente/jsonic.git components/jsonic
 update=cd components/jsonic && git pull origin master
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
+symlinks=components/jsonic/server,services/jsonic,components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 program=jsonic_dev
 proxies=/jsonic/,http://jsonic_dev/
 aliases=/jsonic/files,services/jsonic/files
@@ -70,7 +71,7 @@ update=cd components/dojotrace && git pull origin master
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_dev]
-init=ln -s ../../common/catalog components/catalog; echo "Developer" > components/catalog/info
+init=ln -s ../../common/catalog components/catalog; echo "Developer" > www/libs/servername
 symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
