--- a/servers/prod.conf
+++ b/servers/prod.conf
@@ -70,7 +70,7 @@ update=cd components/dojotrace && git pull origin master
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_prod]
-init=ln -s ../../common/catalog components/catalog; echo "Production" > components/catalog/info
+init=ln -s ../../common/catalog components/catalog; echo "Production" > www/libs/servername
 symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
