add mime types for ogg and wav

--- a/servers/common/catalog/templates/linux.nginx.conf
+++ b/servers/common/catalog/templates/linux.nginx.conf
@@ -3,6 +3,11 @@ server {
     autoindex on;
     server_name localhost;
     
+    types {
+        audio/ogg       ogg;
+        audio/x-wav     wav;
+    }
+
     location /local/ {
         alias /home/${username}/public_html/;
     }
