--- a/servers/common/catalog/templates/mac.nginx.conf
+++ b/servers/common/catalog/templates/mac.nginx.conf
@@ -6,6 +6,10 @@ events {
 
 http {
     include mime.types;
+    types {
+        audio/ogg       ogg;
+        audio/x-wav     wav;
+    }
     default_type application/octet-stream;
 
     server {
