--- a/servers/common/catalog/templates/win.nginx.conf
+++ b/servers/common/catalog/templates/win.nginx.conf
@@ -7,6 +7,10 @@ events {
 
 http {
     include mime.types;
+    types {
+        audio/ogg	ogg;
+	audio/x-wav	wav;
+    }
     default_type application/octet-stream;
 
     server {
