Work on issues #7 and #9
* Exec usual supervisorctl commands from uow
* Work on update command support

--- a/servers/prod.conf
+++ b/servers/prod.conf
@@ -48,10 +48,10 @@ server_name=prod.somedomain.com
 [component:mongo_prod]
 init=mkdir services/mongo
 program=mongo_prod
+backup=servers/prod/services/mongo
 
 [component:jsonic_prod]
 init=git clone git://github.com/parente/jsonic.git components/jsonic
-update=cd components/jsonic && git pull origin master
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 program=jsonic_prod
 proxies=/jsonic/,http://jsonic_prod/
@@ -59,14 +59,12 @@ aliases=/jsonic/files,services/jsonic/files
 
 [component:torongo_prod]
 init=git clone git://github.com/gbishop/torongo.git components/torongo
-update=cd components/torongo && git pull origin master
 program=torongo_prod
 symlinks=components/torongo/server,services/torongo, components/torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
 proxies=/data/,http://torongo_prod/data/
 
 [component:dojotrace_prod]
 init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
-update=cd components/dojotrace && git pull origin master
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_prod]
