--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -43,15 +43,15 @@ programs=mongo_dev,jsonic_dev,torongo_dev
 
 [nginx]
 server_port=80
-server_name=dev.somedomain.com
+server_name=helios
 
 [component:mongo_dev]
 init=mkdir services/mongo
 program=mongo_dev
+backup=servers/dev/services/mongo
 
 [component:jsonic_dev]
 init=git clone git://github.com/parente/jsonic.git components/jsonic
-update=cd components/jsonic && git pull origin master
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 symlinks=components/jsonic/server,services/jsonic,components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 program=jsonic_dev
@@ -60,14 +60,12 @@ aliases=/jsonic/files,services/jsonic/files
 
 [component:torongo_dev]
 init=git clone git://github.com/gbishop/torongo.git components/torongo
-update=cd components/torongo && git pull origin master
 program=torongo_dev
 symlinks=components/torongo/server,services/torongo, components/torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
 proxies=/data/,http://torongo_dev/data/
 
 [component:dojotrace_dev]
 init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
-update=cd components/dojotrace && git pull origin master
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_dev]
