Work on simple update for issue #7
* Move to and restore from backups folder
* Fixed wrong hostname committed to dev.conf

--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -43,7 +43,7 @@ programs=mongo_dev,jsonic_dev,torongo_dev
 
 [nginx]
 server_port=80
-server_name=helios
+server_name=dev.somedomain.com
 
 [component:mongo_dev]
 init=mkdir services/mongo
@@ -53,7 +53,6 @@ backup=servers/dev/services/mongo
 [component:jsonic_dev]
 init=git clone git://github.com/parente/jsonic.git components/jsonic
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
-symlinks=components/jsonic/server,services/jsonic,components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 program=jsonic_dev
 proxies=/jsonic/,http://jsonic_dev/
 aliases=/jsonic/files,services/jsonic/files
