Must include mime.types within the server section to get them all.

--- a/servers/common/catalog/templates/linux.nginx.conf
+++ b/servers/common/catalog/templates/linux.nginx.conf
@@ -3,6 +3,7 @@ server {
     autoindex on;
     server_name localhost;
     
+    include /etc/nginx/mime.types;
     types {
         audio/ogg       ogg;
         audio/x-wav     wav;
