Workaround for issue #14
* Do repair and lock cleanup on mongo start
* Retry torongo more often

--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -1,6 +1,6 @@
 [program:mongo_dev]
 directory=servers/dev/services/mongo
-command=mongod --dbpath ./ --port=27000
+command=bash -c "rm mongod.lock | echo && mongod --repair --dbpath ./ && mongod --dbpath ./ --port=27000"
 process_name=%(program_name)s
 stdout_logfile=servers/dev/services/logs/mongo_stdout.log
 stdout_logfile_maxbytes=1MB
@@ -9,6 +9,7 @@ stderr_logfile=servers/dev/services/logs/mongo_stderr.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 user=nobody
+startsecs=10
 
 [program:jsonic_dev]
 directory=servers/dev/services/jsonic
@@ -37,6 +38,7 @@ stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 first_port=7000
 user=nobody
+startretries=30
 
 [group:dev]
 programs=mongo_dev,jsonic_dev,torongo_dev
