--- a/servers/prod.conf
+++ b/servers/prod.conf
@@ -1,6 +1,6 @@
 [program:mongo_prod]
 directory=servers/prod/services/mongo
-command=mongod --dbpath ./ --port=27001
+command=bash -c "rm mongod.lock | echo && mongod --repair --dbpath ./ && mongod --dbpath ./ --port=27001"
 process_name=%(program_name)s
 stdout_logfile=servers/prod/services/logs/mongo_stdout.log
 stdout_logfile_maxbytes=1MB
@@ -9,6 +9,7 @@ stderr_logfile=servers/prod/services/logs/mongo_stderr.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 user=nobody
+startsecs=10
 
 [program:jsonic_prod]
 directory=servers/prod/services/jsonic
@@ -37,6 +38,7 @@ stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 first_port=7100
 user=nobody
+startretries=30
 
 [group:prod]
 programs=mongo_prod,jsonic_prod,torongo_prod
