--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -1,6 +1,6 @@
 [program:mongo_dev]
 directory=servers/dev/services/mongo
-command=mongod --dbpath ./ --port=27000
+command=/opt/mongodb/bin/mongod --dbpath ./ --port=27000
 process_name=%(program_name)s
 stdout_logfile=servers/dev/services/logs/mongo_stdout.log
 stdout_logfile_maxbytes=1MB
@@ -14,7 +14,7 @@ user=nobody
 directory=servers/dev/services/jsonic
 command=python jsonic.py --port=80%(process_num)02d
 process_name=%(program_name)s_%(process_num)02d
-numprocs=2
+numprocs=1
 stdout_logfile=servers/dev/services/logs/jsonic_stdout_%(process_num)02d.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
