settings for upload.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,8 @@ http {
     tcp_nodelay on;                         # disable Nagle for long-lived conn
     autoindex on;
     gzip on;
+    client_max_body_size 10M;
+    client_body_buffer_size 128k;
     
     # include all server configurations
     include servers/*.conf;
