--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -1,6 +1,6 @@
 [program:mongo_dev]
 directory=servers/dev/services/mongo
-command=bash -c "rm mongod.lock | echo && /opt/mongodb/bin/mongod --repair --dbpath ./ && /opt/mongodb/bin/mongod --dbpath ./ --port=27000"
+command=bash -c "rm mongod.lock | echo && /opt/mongodb/bin/mongod --repair --dbpath ./ && exec /opt/mongodb/bin/mongod --dbpath ./ --port=27000"
 process_name=%(program_name)s
 stdout_logfile=servers/dev/services/logs/mongo_stdout.log
 stdout_logfile_maxbytes=1MB
