Leave out the git cause I can't make it work.

--- a/servers/bigwords.conf
+++ b/servers/bigwords.conf
@@ -75,7 +75,7 @@ symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
 [component:production_bigwords]
-init=git clone git@cvs.cs.unc.edu:BigWords.git components/BigWords; cd components/BigWords; git checkout production
+init=mkdir components/BigWords; echo "do the git yourself"
 symlinks=components/BigWords,www/BigWords
 aliases=/BigWords,www/BigWords
 
