change the group to bigwords

--- a/servers/bigwords.conf
+++ b/servers/bigwords.conf
@@ -40,7 +40,7 @@ first_port=7100
 user=nobody
 startretries=30
 
-[group:dev]
+[group:bigwords]
 programs=mongo_bigwords,jsonic_bigwords,torongo_bigwords
 
 [nginx]
