Identify the server as BigWords.

--- a/servers/bigwords.conf
+++ b/servers/bigwords.conf
@@ -70,7 +70,7 @@ init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_bigwords]
-init=ln -s ../../common/catalog components/catalog; echo "Developer" > www/libs/servername
+init=ln -s ../../common/catalog components/catalog; echo "BigWords" > www/libs/servername
 symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
