Identify as gb, add local aliases.

--- a/servers/gb.conf
+++ b/servers/gb.conf
@@ -60,7 +60,7 @@ programs=mongo_gb,jsonic_gb,torongo_gb,media_gb
 
 [nginx]
 server_port=80
-server_name=gb.cs.unc.edu
+server_name=localhost gb.cs.unc.edu gb
 
 [component:mongo_gb]
 init=mkdir services/mongo
@@ -80,17 +80,17 @@ program=torongo_gb
 symlinks=components/torongo/server,services/torongo, components/torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
 proxies=/data/,http://torongo_gb/data/
 
-[component:media_gb]
-program=media_gb
-proxies=/media/,http://media_gb/media/
-upload=/upload,/media/upload/
+;[component:media_gb]
+;program=media_gb
+;proxies=/media/,http://media_gb/media/
+;upload=/upload,/media/upload/
 
 [component:dojotrace_gb]
 init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_gb]
-init=ln -s ../../common/catalog components/catalog; echo "Developer" > www/libs/servername
+init=ln -s ../../common/catalog components/catalog; echo "gb" > www/libs/servername
 symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
@@ -98,7 +98,4 @@ aliases=/catalog,www/catalog
 init=ln -s ../../../common/uow.js www/libs/uow.js
 
 [component:local_gb]
-; use the component syntax to install apps for the domain too, for example:
-; init=git clone git://github.com/parente/spaceship.git
-; symlinks=spaceship,www/spaceship
-; aliases=/local,/home/gb/public_html
+aliases=/,/var/www/, /local,/home/gb/public_html
