fixup server names, turnoff server_name_in_redirect

--- a/servers/bigwords.conf
+++ b/servers/bigwords.conf
@@ -45,7 +45,7 @@ programs=mongo_bigwords,jsonic_bigwords,torongo_bigwords
 
 [nginx]
 server_port=80
-server_name=bigwords.cs.unc.edu
+server_name=bigwords.cs.unc.edu bigwords bigwords.dev
 
 [component:mongo_bigwords]
 init=mkdir services/mongo
