--- a/servers/gb.conf
+++ b/servers/gb.conf
@@ -60,7 +60,7 @@ programs=mongo_gb,jsonic_gb,torongo_gb,media_gb
 
 [nginx]
 server_port=80
-server_name=localhost gb.cs.unc.edu gb
+server_name=gb.cs.unc.edu gb localhost
 
 [component:mongo_gb]
 init=mkdir services/mongo
