Add gzip and expires.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,6 +20,15 @@ http {
     tcp_nodelay on;                         # disable Nagle for long-lived conn
     autoindex on;
     gzip on;
+    gzip_static       on;
+    gzip_buffers      16 8k;
+    gzip_comp_level   9;
+    gzip_http_version 1.1; # 1.0 breaks our proxies for student work
+    gzip_min_length   0;
+    gzip_types        text/plain text/html text/css image/x-icon image/bmp application/json application/javascript application/x-javascript;
+    gzip_vary         on;
+    expires 30m;
+
     client_max_body_size 10M;
     client_body_buffer_size 128k;
     
