--- a/servers/gb.conf
+++ b/servers/gb.conf
@@ -27,7 +27,7 @@ user=nobody
 
 [program:torongo_gb]
 directory=servers/gb/services/torongo
-command=python jsonreststore.py --port=70%(process_num)02d --mongoport=27000
+command=python jsonreststore.py --port=70%(process_num)02d --mongoport=27000 --logId=gb --logLevel=warning
 process_name=%(program_name)s_%(process_num)02d
 numprocs=2
 stdout_logfile=servers/gb/services/logs/torongo_stdout_%(process_num)02d.log
