--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -27,7 +27,7 @@ user=nobody
 
 [program:torongo_dev]
 directory=servers/dev/services/torongo
-command=python jsonreststore.py --port=70%(process_num)02d --mongoport=27000
+command=python jsonreststore.py --port=70%(process_num)02d --mongoport=27000 --logId=dev --logLevel=debug
 process_name=%(program_name)s_%(process_num)02d
 numprocs=2
 stdout_logfile=servers/dev/services/logs/torongo_stdout_%(process_num)02d.log
