--- a/servers/bigwords.conf
+++ b/servers/bigwords.conf
@@ -27,7 +27,7 @@ user=nobody
 
 [program:torongo_bigwords]
 directory=servers/bigwords/services/torongo
-command=python jsonreststore.py --port=71%(process_num)02d --mongoport=27001
+command=python jsonreststore.py --port=71%(process_num)02d --mongoport=27001 --logId=bw --logLevel=warning
 process_name=%(program_name)s_%(process_num)02d
 numprocs=2
 stdout_logfile=servers/bigwords/services/logs/torongo_stdout_%(process_num)02d.log
