Disable server_name_in_redirect for student nginx configs
* Tested on mac, need win/lin validation

--- a/servers/common/catalog/templates/linux.nginx.conf
+++ b/servers/common/catalog/templates/linux.nginx.conf
@@ -2,7 +2,8 @@ server {
     listen 80;
     autoindex on;
     server_name localhost;
-    
+    server_name_in_redirect off;
+
     include /etc/nginx/mime.types;
     types {
         audio/ogg       ogg;
