--- a/servers/common/catalog/templates/win.nginx.conf
+++ b/servers/common/catalog/templates/win.nginx.conf
@@ -17,6 +17,7 @@ http {
         listen 80;
         autoindex on;
         server_name localhost;
+        server_name_in_redirect off;
         
         location /local/ {
             alias html/;
