Bring parente.conf up to date for local dev

--- a/servers/parente.conf
+++ b/servers/parente.conf
@@ -27,7 +27,7 @@ user=nobody
 
 [program:torongo_parente]
 directory=servers/parente/services/torongo
-command=python jsonreststore.py --port=70%(process_num)02d --mongoport=27000
+command=python jsonreststore.py --port=70%(process_num)02d --mongoport=27000 --logLevel=warning
 process_name=%(program_name)s_%(process_num)02d
 numprocs=2
 stdout_logfile=servers/parente/services/logs/torongo_stdout_%(process_num)02d.log
@@ -44,8 +44,8 @@ startretries=30
 programs=mongo_parente,jsonic_parente,torongo_parente
 
 [nginx]
-server_port=8080
-server_name=helios
+server_port=80
+server_name=localhost
 
 [component:mongo_parente]
 init=mkdir services/mongo
@@ -70,15 +70,9 @@ init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_parente]
-init=ln -s ../../common/catalog components/catalog; echo "Parente" > www/libs/servername
+init=ln -s ../../common/catalog components/catalog; echo "parente" > www/libs/servername
 symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
 [component:uow_parente]
-init=ln -s ../../../common/uow.js www/libs/uow.js
-
-; [component:someapp_parente]
-; use the component syntax to install apps for the domain too, for example:
-; init=git clone git://github.com/parente/spaceship.git
-; symlinks=spaceship,www/spaceship
-; aliases=/spaceship,www/spaceship
+init=ln -s ../../../common/uow.js www/libs/uow.js; ln -s ../../../../common/uow/ui www/libs/uow/ui
