No caching until I figure out versioning.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
     gzip_min_length   0;
     gzip_types        text/plain text/html text/css image/x-icon image/bmp application/json application/javascript application/x-javascript;
     gzip_vary         on;
-    expires 30m;
+    expires 0;
 
     client_max_body_size 10M;
     client_body_buffer_size 128k;
