Drop media for now.

--- a/servers/gb.conf
+++ b/servers/gb.conf
@@ -40,23 +40,8 @@ first_port=7000
 user=nobody
 startretries=30
 
-[program:media_gb]
-directory=servers/gb/services/torongo
-command=python mediastore.py --port=75%(process_num)02d --mongoport=27000
-process_name=%(program_name)s_%(process_num)02d
-numprocs=2
-stdout_logfile=servers/gb/services/logs/media_stdout_%(process_num)02d.log
-stdout_logfile_maxbytes=1MB
-stdout_logfile_backups=10 
-stderr_logfile=servers/gb/services/logs/media_stderr_%(process_num)02d.log
-stderr_logfile_maxbytes=1MB
-stderr_logfile_backups=10
-first_port=7500
-user=nobody
-startretries=30
-
 [group:gb]
-programs=mongo_gb,jsonic_gb,torongo_gb,media_gb
+programs=mongo_gb,jsonic_gb,torongo_gb
 
 [nginx]
 server_port=80
@@ -94,8 +79,8 @@ init=ln -s ../../common/catalog components/catalog; echo "gb" > www/libs/servern
 symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
-[component:uow_gb]
-init=ln -s ../../../common/uow.js www/libs/uow.js
-
 [component:local_gb]
 aliases=/,/var/www/, /local,/home/gb/public_html
+
+[component:uow_gb]
+symlinks=../common/uow.js,www/libs/uow.js, ../common/uow/ui,www/libs/uow/ui
