--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,8 @@ events {
 http {
     include mime.types;                     # standard types
     log_format vhcombined '$remote_addr $host $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
-    access_log access.log vhcombined;                  # access log in this folder
+    access_log /var/log/nginx/access.log vhcombined;
+    error_log /var/log/nginx/error.log;
     default_type application/octet-stream;
     keepalive_timeout 65;
     proxy_read_timeout 200;
