Add expires header to local files to avoid getting stuck in cache.

--- a/servers/common/catalog/templates/linux.nginx.conf
+++ b/servers/common/catalog/templates/linux.nginx.conf
@@ -12,6 +12,7 @@ server {
 
     location /local/ {
         alias /home/${username}/public_html/;
+        expires 0;
     }
     location / {
         proxy_pass_header Server;
