--- a/servers/common/catalog/templates/mac.nginx.conf
+++ b/servers/common/catalog/templates/mac.nginx.conf
@@ -20,6 +20,7 @@ http {
         
         location /local/ {
             alias /Users/${username}/Sites/;
+            expires 0;
         }
         location / {
             proxy_pass_header Server;
