--- a/servers/common/catalog/templates/win.nginx.conf
+++ b/servers/common/catalog/templates/win.nginx.conf
@@ -21,6 +21,7 @@ http {
         
         location /local/ {
             alias html/;
+            expires 0;
         }
         location / {
             proxy_pass_header Server;
