Include ui mods.

--- a/servers/bigwords.conf
+++ b/servers/bigwords.conf
@@ -80,7 +80,7 @@ symlinks=components/BigWords,www/BigWords
 aliases=/BigWords,www/BigWords
 
 [component:uow_bigwords]
-init=ln -s ../../../common/uow.js www/libs/uow.js
+symlinks=../common/uow.js,www/libs/uow.js, ../common/uow/ui,www/libs/uow/ui
 
 ; [component:someapp_bigwords]
 ; use the component syntax to install apps for the domain too, for example:
