--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -75,7 +75,7 @@ symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
 [component:uow_dev]
-init=ln -s ../../../common/uow.js www/libs/uow.js
+symlinks=../common/uow.js,www/libs/uow.js, ../common/uow/ui,www/libs/uow/ui
 
 ; [component:someapp_dev]
 ; use the component syntax to install apps for the domain too, for example:
