--- a/servers/gb.conf
+++ b/servers/gb.conf
@@ -40,8 +40,23 @@ first_port=7000
 user=nobody
 startretries=30
 
+[program:media_gb]
+directory=servers/gb/services/torongo
+command=python mediastore.py --port=75%(process_num)02d --mongoport=27000 --logId=gbmedia --logLevel=debug
+process_name=%(program_name)s_%(process_num)02d
+numprocs=2
+stdout_logfile=servers/gb/services/logs/media_stdout_%(process_num)02d.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10 
+stderr_logfile=servers/gb/services/logs/media_stderr_%(process_num)02d.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=10
+first_port=7500
+user=nobody
+startretries=30
+
 [group:gb]
-programs=mongo_gb,jsonic_gb,torongo_gb
+programs=mongo_gb,jsonic_gb,torongo_gb,media_gb
 
 [nginx]
 server_port=80
@@ -65,10 +80,10 @@ program=torongo_gb
 symlinks=components/torongo/server,services/torongo, components/torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
 proxies=/data/,http://torongo_gb/data/
 
-;[component:media_gb]
-;program=media_gb
-;proxies=/media/,http://media_gb/media/
-;upload=/upload,/media/upload/
+[component:media_gb]
+program=media_gb
+proxies=/media/,http://media_gb/media/
+upload=/upload,/media/upload/
 
 [component:dojotrace_gb]
 init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
