Updated pointers to jsonic

--- a/servers/bigwords.conf
+++ b/servers/bigwords.conf
@@ -53,7 +53,7 @@ program=mongo_bigwords
 backup=servers/bigwords/services/mongo
 
 [component:jsonic_bigwords]
-init=git clone git://github.com/parente/jsonic.git components/jsonic
+init=git clone git://github.com/uncopenweb/jsonic.git components/jsonic
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 program=jsonic_bigwords
 proxies=/jsonic/,http://jsonic_bigwords/
