--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -53,7 +53,7 @@ program=mongo_dev
 backup=servers/dev/services/mongo
 
 [component:jsonic_dev]
-init=git clone git://github.com/parente/jsonic.git components/jsonic
+init=git clone git://github.com/uncopenweb/jsonic.git components/jsonic
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 program=jsonic_dev
 proxies=/jsonic/,http://jsonic_dev/
