--- a/servers/parente.conf
+++ b/servers/parente.conf
@@ -53,7 +53,7 @@ program=mongo_parente
 backup=servers/parente/services/mongo
 
 [component:jsonic_parente]
-init=git clone git://github.com/parente/jsonic.git components/jsonic
+init=git clone git://github.com/uncopenweb/jsonic.git components/jsonic
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 program=jsonic_parente
 proxies=/jsonic/,http://jsonic_parente/
