--- a/servers/prod.conf
+++ b/servers/prod.conf
@@ -53,7 +53,7 @@ program=mongo_prod
 backup=servers/prod/services/mongo
 
 [component:jsonic_prod]
-init=git clone git://github.com/parente/jsonic.git components/jsonic
+init=git clone git://github.com/uncopenweb/jsonic.git components/jsonic
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 program=jsonic_prod
 proxies=/jsonic/,http://jsonic_prod/
