--- a/servers/spaceship.conf
+++ b/servers/spaceship.conf
@@ -20,7 +20,7 @@ server_port=80
 server_name=et-dev.cs.unc.edu
 
 [component:jsonic_ss]
-init=git clone git://github.com/parente/jsonic.git components/jsonic
+init=git clone git://github.com/uncopenweb/jsonic.git components/jsonic
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 program=jsonic_ss
 proxies=/jsonic/,http://jsonic_ss/
