--- a/servers/gb.conf
+++ b/servers/gb.conf
@@ -68,7 +68,7 @@ program=mongo_gb
 backup=servers/gb/services/mongo
 
 [component:jsonic_gb]
-init=git clone git://github.com/parente/jsonic.git components/jsonic
+init=git clone git://github.com/uncopenweb/jsonic.git components/jsonic
 symlinks=components/jsonic/server,services/jsonic, components/jsonic/JSonic.js,www/libs/info/mindtrove/JSonic.js
 program=jsonic_gb
 proxies=/jsonic/,http://jsonic_gb/
