Fixed location of gbishop's moved projects

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,8 +9,8 @@ events {
 http {
     include mime.types;                     # standard types
     log_format vhcombined '$remote_addr $host $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
-    access_log /var/log/nginx/access.log vhcombined;
-    error_log /var/log/nginx/error.log;
+    #access_log /var/log/nginx/access.log vhcombined;
+    #error_log /var/log/nginx/error.log;
     default_type application/octet-stream;
     keepalive_timeout 65;
     proxy_read_timeout 200;
@@ -20,7 +20,7 @@ http {
     tcp_nodelay on;                         # disable Nagle for long-lived conn
     autoindex on;
     gzip on;
-    gzip_static       on;
+    #gzip_static       on;
     gzip_buffers      16 8k;
     gzip_comp_level   9;
     gzip_http_version 1.1; # 1.0 breaks our proxies for student work
