--- a/servers/gb.conf
+++ b/servers/gb.conf
@@ -86,7 +86,7 @@ proxies=/media/,http://media_gb/media/
 upload=/upload,/media/upload/
 
 [component:dojotrace_gb]
-init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
+init=git clone git://github.com/uncopenweb/dojotrace.git components/dojotrace
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_gb]
