--- a/servers/parente.conf
+++ b/servers/parente.conf
@@ -60,13 +60,13 @@ proxies=/jsonic/,http://jsonic_parente/
 aliases=/jsonic/files,services/jsonic/files
 
 [component:torongo_parente]
-init=git clone git://github.com/gbishop/torongo.git components/torongo
+init=git clone git://github.com/uncopenweb/torongo.git components/torongo
 program=torongo_parente
 symlinks=components/torongo/server,services/torongo, components/torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
 proxies=/data/,http://torongo_parente/data/
 
 [component:dojotrace_parente]
-init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
+init=git clone git://github.com/uncopenweb/dojotrace.git components/dojotrace
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_parente]
