--- a/servers/spaceship.conf
+++ b/servers/spaceship.conf
@@ -27,7 +27,7 @@ proxies=/jsonic/,http://jsonic_ss/
 aliases=/jsonic/files,services/jsonic/files
 
 [component:dojotrace_ss]
-init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
+init=git clone git://github.com/uncopenweb/dojotrace.git components/dojotrace
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:spaceship_ss]
