--- a/servers/prod.conf
+++ b/servers/prod.conf
@@ -60,13 +60,13 @@ proxies=/jsonic/,http://jsonic_prod/
 aliases=/jsonic/files,services/jsonic/files
 
 [component:torongo_prod]
-init=git clone git://github.com/gbishop/torongo.git components/torongo
+init=git clone git://github.com/uncopenweb/torongo.git components/torongo
 program=torongo_prod
 symlinks=components/torongo/server,services/torongo, components/torongo/MongoStore.js,www/libs/uow/data/MongoStore.js
 proxies=/data/,http://torongo_prod/data/
 
 [component:dojotrace_prod]
-init=git clone git://github.com/gbishop/dojotrace.git components/dojotrace
+init=git clone git://github.com/uncopenweb/dojotrace.git components/dojotrace
 symlinks=components/dojotrace/trace.js,www/libs/uow/trace.js
 
 [component:catalog_prod]
