Add site specific nginx config.

--- a/servers/bigwords.conf
+++ b/servers/bigwords.conf
@@ -46,6 +46,15 @@ programs=mongo_bigwords,jsonic_bigwords,torongo_bigwords
 [nginx]
 server_port=80
 server_name=bigwords.cs.unc.edu bigwords bigwords.dev
+server_insert: location ~ ^/V(\d+)(.*)$ {
+    alias /backup/uow/servers/bigwords/www/BigWords/$2;
+    }
+    location / {
+    alias /backup/uow/servers/bigwords/www/BigWords/;
+    }
+http_insert: access_log /var/log/nginx/access.log vhcombined;
+    error_log /var/log/nginx/error.log;
+    gzip_static on;
 
 [component:mongo_bigwords]
 init=mkdir services/mongo
