--- a/servers/dev.conf
+++ b/servers/dev.conf
@@ -45,7 +45,10 @@ programs=mongo_dev,jsonic_dev,torongo_dev
 
 [nginx]
 server_port=80
-server_name=gbserver2.cs.unc.edu
+server_name=gbserver2.cs.unc.edu gbserver2 local.dev
+http_insert: access_log /var/log/nginx/access.log vhcombined;
+    error_log /var/log/nginx/error.log;
+    gzip_static on;
 
 [component:mongo_dev]
 init=mkdir services/mongo
