--- a/servers/gb.conf
+++ b/servers/gb.conf
@@ -61,6 +61,9 @@ programs=mongo_gb,jsonic_gb,torongo_gb,media_gb
 [nginx]
 server_port=80
 server_name=gb.cs.unc.edu gb localhost
+http_insert: access_log /var/log/nginx/access.log vhcombined;
+    error_log /var/log/nginx/error.log;
+    gzip_static on;
 
 [component:mongo_gb]
 init=mkdir services/mongo
