More flash hacks.

--- a/servers/gb.conf
+++ b/servers/gb.conf
@@ -71,7 +71,10 @@ program=mongo_gb
 backup=servers/gb/services/mongo
 
 [component:jsonic_gb]
-init=git clone git://github.com/uncopenweb/jsonic.git components/jsonic; git checkout flash
+init:git clone git://github.com/uncopenweb/jsonic.git components/jsonic;
+    cd components/jsonic;
+    git checkout flash;
+    ln -s /home/gb/Projects/NewWeb/SoundManager2 .
 symlinks:components/jsonic/server,services/jsonic, 
     components/jsonic/JSonic.js,www/libs/uow/audio/JSonic.js, 
     components/jsonic/SoundManager2/script/soundmanager2.js,www/libs/uow/audio/soundmanager2.js, 
