Add local path info to parente.conf

--- a/servers/parente.conf
+++ b/servers/parente.conf
@@ -75,4 +75,7 @@ symlinks=components/catalog,www/catalog
 aliases=/catalog,www/catalog
 
 [component:uow_parente]
-init=ln -s ../../../common/uow.js www/libs/uow.js; ln -s ../../../../common/uow/ui www/libs/uow/ui
+symlinks=../common/uow.js,www/libs/uow.js, ../common/uow/ui,www/libs/uow/ui
+
+[component:local_parente]
+aliases=/local,/Users/parente/projects
